--- a/cifar10/re-ini/ReLU-E-2-X.ipynb
+++ b/cifar10/re-ini/ReLU-E-2-X.ipynb
@@ -52,7 +52,7 @@
     "pl.plot(std_space, E_Y_table)\n",
     "pl.xlabel('std')\n",
     "pl.ylabel('E(X)')\n",
-    "pl.gca().set_aspect('equal', adjustable='box')"
+    "pl.gca().set_aspect('equal')"
    ]
   },
   {
