--- a/cifar10/re-ini/residual-network-ini.ipynb
+++ b/cifar10/re-ini/residual-network-ini.ipynb
@@ -8,27 +8,30 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import minpy.numpy as np\n",
+    "from minpy.context import set_context, gpu\n",
+    "set_context(gpu(0))\n",
     "import matplotlib.pylab as pl\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "activations = {\n",
+    "    'identity' : lambda X : X,\n",
     "    'ReLU' : (lambda X : np.maximum(0, X)),\n",
     "    'tanh' : np.tanh,\n",
     "}\n",
     "a = 'tanh'\n",
     "HIDDEN_LAYERS = 6\n",
     "N = 3072\n",
-    "ratio = 0.3\n",
+    "ratio = 0.2\n",
     "z = 0.5\n",
     "def residual(X, W, bias):\n",
     "    Y = np.dot(X, W) + bias\n",
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -73,19 +76,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.499713094499\n",
-      "0.410342953598\n",
-      "0.360536080627\n",
-      "0.330392727893\n",
-      "0.310900885022\n",
-      "0.297889156371\n"
+      "1.00018\n",
+      "0.690758\n",
+      "0.580037\n",
+      "0.543213\n",
+      "0.531218\n",
+      "0.527074\n"
      ]
     }
    ],
    "source": [
-    "X = np.random.normal(0, 0.5, (1000, 3072))\n",
+    "X = np.random.normal(0, 1, (1000, 3072))\n",
     "for index, W in enumerate(weights):\n",
-    "    print X.std()\n",
+    "    print np.std(X)\n",
     "    X = residual(X, W, biases[index])"
    ]
   }
