--- a/cifar10/re-ini/residual-network-ini.ipynb
+++ b/cifar10/re-ini/residual-network-ini.ipynb
@@ -28,10 +28,10 @@
     "    'ReLU' : (lambda X : np.maximum(0, X)),\n",
     "    'tanh' : np.tanh,\n",
     "}\n",
-    "a = 'tanh'\n",
+    "a = 'identity'\n",
     "HIDDEN_LAYERS = 6\n",
     "N = 3072\n",
-    "ratio = 0.2\n",
+    "ratio = 1\n",
     "z = 0.5\n",
     "def residual(X, W, bias):\n",
     "    Y = np.dot(X, W) + bias\n",
@@ -77,11 +77,11 @@
      "output_type": "stream",
      "text": [
       "1.00018\n",
-      "0.690758\n",
-      "0.580037\n",
-      "0.543213\n",
-      "0.531218\n",
-      "0.527074\n"
+      "1.00009\n",
+      "0.999927\n",
+      "1.00086\n",
+      "1.00116\n",
+      "1.0\n"
      ]
     }
    ],
