--- a/cifar10/re-ini/covariance.ipynb
+++ b/cifar10/re-ini/covariance.ipynb
@@ -2,44 +2,144 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import minpy.numpy as np\n",
-    "from minpy.context import set_context, gpu\n",
-    "set_context(gpu(0))"
+    "import matplotlib.pylab as pl\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "# import minpy.numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def covariance(left, right):\n",
+    "    return np.mean((left - np.mean(left)) * (right - np.mean(right)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[ 0.03707837]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 4.73102100678e-05\n"
+     ]
     }
    ],
    "source": [
-    "covariance_table = []\n",
-    "for i in range(20):\n",
-    "    X = np.random.normal(0, 1, (100000, 3072))\n",
+    "N = 16\n",
+    "average_covariance = 0\n",
+    "average_rho = 0\n",
+    "for i in range(N):\n",
+    "    X = np.random.normal(0, 1, (3072, 3072))\n",
+    "    Y = np.random.normal(0, 1, (3072, 3072))\n",
+    "    c = covariance(X, Y)\n",
+    "    result += c\n",
+    "    rho = c / (np.std(X) * np.std(Y))\n",
+    "    average_rho += rho\n",
+    "average_covariance /= float(N)\n",
+    "average_rho /= float(N)\n",
+    "print average_covariance, average_rho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.00221113677024\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 20\n",
+    "average_covariance = 0\n",
+    "for i in range(N):\n",
+    "    X = np.random.normal(0, 1, (3072, 3072))\n",
     "    W = np.random.normal(0, 1, (3072, 3072))\n",
     "    Y = np.dot(X, W)\n",
-    "    covariance = np.mean((X - np.mean(X)) * (Y - np.mean(Y)))\n",
-    "    covariance_table.append(covariance)\n",
-    "np.max(np.abs(np.array(covariance_table)))"
+    "    c = covariance(X, Y)\n",
+    "    average_covariance += c\n",
+    "average_covariance /= float(N)\n",
+    "print average_covariance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5.19129226503e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 20\n",
+    "average_covariance = 0\n",
+    "for i in range(N):\n",
+    "    X = np.random.normal(0, 1, (3072, 3072))\n",
+    "    Y = np.random.normal(0, 1, (3072, 3072))\n",
+    "    c = covariance(X, Y)\n",
+    "    average_covariance += c\n",
+    "average_covariance /= float(N)\n",
+    "print average_covariance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.703544727026\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 2\n",
+    "average_covariance = 0\n",
+    "for i in range(N):\n",
+    "    X = np.random.normal(0, 1, (100000, 3072))\n",
+    "    U = np.random.normal(0, 1, (3072, 3072))\n",
+    "    V = np.random.normal(0, 1, (3072, 3072))\n",
+    "    XU = np.dot(X, U)\n",
+    "    XV = np.dot(X, V)\n",
+    "    c = covariance(XU, XV)\n",
+    "    average_covariance += c\n",
+    "average_covariance /= float(N)\n",
+    "print average_covariance"
    ]
   }
  ],
