--- a/cifar10/re-ini/highway-network-ini.ipynb
+++ b/cifar10/re-ini/highway-network-ini.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -23,48 +23,25 @@
    "source": [
     "activations = {\n",
     "    'ReLU' : (lambda X : np.maximum(0, X)),\n",
+    "    'sigmoid' : (lambda X : 1 / (1 + np.exp(-X))),\n",
     "    'tanh' : (lambda X : 1.88 * np.tanh(X)),\n",
-    "}\n",
+    "} # TODO validate the ratio is 1 / b\n",
     "a = 'tanh'\n",
     "HIDDEN_LAYERS = 10\n",
     "N = 3072\n",
     "ratio = 0.3\n",
     "z = 0.5\n",
-    "def residual(X, W, bias):\n",
-    "    Y = np.dot(X, W) + bias\n",
+    "def highway(X, U, V, bias):\n",
+    "    Y = np.dot(X, U) + bias\n",
     "    f_Y = activations[a](Y)\n",
-    "    output = z * X + (1 - z) * f_Y\n",
+    "    Z = activations['sigmoid'](np.dot(X, V))\n",
+    "    output = Z * X + (1 - Z) * f_Y\n",
     "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "std = (1 / float(N * ratio ** 2) * (1 + z) / (1 - z)) ** 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "shapes = (N,) * HIDDEN_LAYERS + (N,)\n",
-    "weight_shapes = ((d, shapes[i + 1]) for i, d in enumerate(shapes[:-1]))\n",
-    "weights = [np.random.normal(0, std, shape) for shape in weight_shapes]\n",
-    "biases = [np.zeros(d) for d in shapes[1:]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -73,24 +50,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.999434953905\n",
-      "1.00623541545\n",
-      "1.00826113932\n",
-      "1.00865428804\n",
-      "1.00895027468\n",
-      "1.00900350299\n",
-      "1.00918289353\n",
-      "1.00902290682\n",
-      "1.00903520207\n",
-      "1.00913894153\n"
+      "10.4166666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "std = (1 / float(N * ratio ** 2) * (1 + z) / (1 - z)) ** 0.5 * 100\n",
+    "print std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "shapes = (N,) * HIDDEN_LAYERS + (N,)\n",
+    "weight_shapes = [(d, shapes[i + 1]) for i, d in enumerate(shapes[:-1])]\n",
+    "Us = [np.random.normal(0, std, shape) for shape in weight_shapes]\n",
+    "Vs = [np.random.normal(0, std, shape) for shape in weight_shapes]\n",
+    "biases = [np.zeros(d) for d in shapes[1:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.00033447938\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/ipykernel/__main__.py:3: RuntimeWarning: overflow encountered in exp\n",
+      "  app.launch_new_instance()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.50394913669\n",
+      "1.70129458909\n",
+      "1.79168556958\n",
+      "1.83515897937\n",
+      "1.85658819824\n",
+      "1.86726949414\n",
+      "1.87265185996\n",
+      "1.87530729981\n",
+      "1.87660705834\n"
      ]
     }
    ],
    "source": [
     "X = np.random.normal(0, 1.0, (1000, 3072))\n",
-    "for index, W in enumerate(weights):\n",
+    "for U, V, bias in zip(Us, Vs, biases):\n",
     "    print X.std()\n",
-    "    X = residual(X, W, biases[index])"
+    "    X = highway(X, U, V, bias)"
    ]
   }
  ],
