--- a/cifar10/re-ini/trained-network-covariance.ipynb
+++ b/cifar10/re-ini/trained-network-covariance.ipynb
@@ -330,6 +330,39 @@
     "            'W Y', covariance(W, Y), \\\n",
     "            'W, dY', covariance(W, dY)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dfY_cache = [(X > 0).asnumpy().astype(int) for X in X_cache[1:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'numpy.ndarray'>\n",
+      "<class 'minpy.array.Array'>\n",
+      "<class 'minpy.array.Array'>\n",
+      "<class 'minpy.array.Array'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for "
+   ]
   }
  ],
  "metadata": {
